--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "csv-parse": "^4.12.0",
     "esm": "^3.2.25",
-    "jsonexport": "^3.0.1"
+    "jsonexport": "^3.0.1",
+    "puppeteer": "^5.3.1"
   }
 }
